<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteNoteContainerId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageDeleteNoteId"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/delete_icon"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/delete_note"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNoteId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNoteId"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNoteId"/>

    <TextView
        android:id="@+id/textDeleteNoteMessageId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNoteId"/>

    <TextView
        android:id="@+id/textDeleteNoteId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/delete_note"
        android:textColor="@color/colorDelete"
        android:textAllCaps="true"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessageId"/>

    <TextView
        android:id="@+id/textDeleteNoteCancelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel_dialog"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textDeleteNoteId"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessageId"/>

</androidx.constraintlayout.widget.ConstraintLayout>