<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMiscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_miscellaneous"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textMiscellaneousId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:gravity="center"
        android:text="@string/miscellaneous"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1Id"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_1"/>

            <ImageView
                android:id="@+id/imageColor1Id"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/done_icon"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor2Id"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_2"/>

            <ImageView
                android:id="@+id/imageColor2Id"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor3Id"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_3"/>

            <ImageView
                android:id="@+id/imageColor3Id"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor4Id"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_4"/>

            <ImageView
                android:id="@+id/imageColor4Id"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor5Id"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_5"/>

            <ImageView
                android:id="@+id/imageColor5Id"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor6Id"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_6"/>

            <ImageView
                android:id="@+id/imageColor6Id"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/white" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/pick_color"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImageId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/image_icon"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddUrlId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/web_link"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_url"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorIcons"/>

    </LinearLayout>

    <!--Delete Note layout-->
    <LinearLayout
        android:id="@+id/layoutDeleteNoteId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/delete_icon"
            app:tint="@color/colorDelete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/delete_note"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorDelete"
            />

    </LinearLayout>

</LinearLayout>