<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".activity.MainActivity">

    <!--My notes TextView -->
    <TextView
        android:id="@+id/textMyNotesId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/myNotesTextView"
        android:textColor="@color/white"
        android:textSize="@dimen/_22ssp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        />
    <!--searchIcon ImageView and searchNotes EditText layout-->
    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotesId">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/search_icon"
            app:tint="@color/colorSearchIcon" />

        <EditText
            android:id="@+id/inputSearchEtId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textColorHint="@color/colorTextHint"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerViewId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickAction"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"
        />

    <!--Add Note,Image,WenLink ImageView layout-->

    <LinearLayout
        android:id="@+id/layoutQuickAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionsBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageAddNoteId"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:src="@drawable/add_icon"
            android:contentDescription="@string/app_name"
            app:tint="@color/colorIcons" />
        <ImageView
            android:id="@+id/imageAddImageId"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:src="@drawable/image_icon"
            android:contentDescription="@string/app_name"
            app:tint="@color/colorIcons" />
        <ImageView
            android:id="@+id/imageAddWebLinkId"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:src="@drawable/web_link"
            android:contentDescription="@string/app_name"
            app:tint="@color/colorIcons" />

    </LinearLayout>
<!--Add button ImageView -->
    <ImageView
        android:id="@+id/imageAddNoteMainId"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:contentDescription="@string/app_name"
        android:background="@drawable/background_add_button"
        android:src="@drawable/add_btn"
        android:padding="@dimen/_5sdp"
        app:tint="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickAction"
        app:layout_constraintTop_toTopOf="@id/layoutQuickAction"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>