<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".activity.CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp"
        >
<!--Back, done Button ImageView , NoteTitle, NoteSubtitle EditText , View
 ConstraintLayout under ScrollView-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageBackId"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_icon"
                app:tint="@color/colorIcons"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/imageSaveId"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/background_done_button"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/done_icon"
                app:tint="@color/colorIcons"
                app:layout_constraintBottom_toBottomOf="@id/imageBackId"
                app:layout_constraintTop_toTopOf="@id/imageBackId"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <EditText
                android:id="@+id/inputNoteTitleId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@id/imageBackId"/>

            <TextView
                android:id="@+id/textDateTimeId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitleId"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitleId"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitleId"/>
            <EditText
                android:id="@+id/inputNoteSubtitleId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/colorTextSubtitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewSubtitleIndicatorId"
                app:layout_constraintTop_toBottomOf="@id/textDateTimeId"/>

            <View
                android:id="@+id/viewSubtitleIndicatorId"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/inputNoteSubtitleId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputNoteSubtitleId"/>

            <ImageView
                android:id="@+id/imageNoteId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/inputNoteSubtitleId"/>

            <ImageView
                android:id="@+id/imageRemoveImageId"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_delete"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/delete_icon"
                app:tint="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/imageNoteId"
                app:layout_constraintTop_toTopOf="@id/imageNoteId"/>

            <!--Web Url link textView and delete imageView layout -->
            <LinearLayout
                android:id="@+id/layoutWebURLId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/imageNoteId"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/textWebURL_Id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_13ssp"/>
                <ImageView
                    android:id="@+id/imageRemoveWebURLId"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/delete_icon"
                    app:tint="@color/colorDelete" />

            </LinearLayout>

            <EditText
                android:id="@+id/inputNoteId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutWebURLId"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <include layout="@layout/layout_miscellaneous"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>